# ai-agent-task

./: .gitignore  asset-generate-agent.ipynb  goals.txt  life-coach.py  main.py  movie-expert-agent.ipynb  pyproject.toml  requirements.txt  restaurant_agent_models.py  restaurant_bot.py
restaurant_agents/: complaints_agent.py  guardrails.py  menu_agent.py  order_agent.py  reservation_agent.py  triage_agent.py
story_book_maker/: agent.py  prompt.py
