[project]
name = "ai-agent-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "langchain[openai]>=1.3.7",
  "langgraph>=1.2.4",
  "openai>=1.98.0",
  "pillow>=12.2.0",
  "python-dotenv>=1.2.2",
  "torch>=2.12.0",
  "torchvision>=0.27.0",
  "transformers>=5.10.2",
]

[dependency-groups]
dev = [
  "ipykernel>=6.30.0",
]
